<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_baseline_search_24"
        app:showAsAction="always"
        />

    <item android:id="@+id/menu_sort"
        android:title="@string/filter"
        android:icon="@drawable/ic_baseline_filter_list_24"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menu_refresh"
        android:title="@string/refresh"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/menu_theme"
        android:title="@string/change_theme"
        app:showAsAction="never"
        />
</menu>