<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/bgColor">

        <TextView
            android:id="@+id/tv_choose_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_theme"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="?attr/textColor"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_themes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_choose_theme"
            app:layout_constraintStart_toStartOf="@id/tv_choose_theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <RadioButton
                android:id="@+id/rb_light_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layoutDirection="rtl"
                android:textColor="?attr/textColor"
                android:buttonTint="@color/colorAccent"
                android:text="@string/light_theme" />

            <RadioButton
                android:id="@+id/rb_dartk_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:layoutDirection="rtl"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="?attr/textColor"
                android:buttonTint="@color/colorAccent"
                android:text="@string/dark_theme" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>